# turtlebot_arm

./: .hgignore  .hgtags  LICENSE  README.md  stack.xml
turtlebot_arm/: .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_arm_block_manipulation/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_arm_block_manipulation/action/: InteractiveBlockManipulation.action
turtlebot_arm_block_manipulation/demo/: block_manipulation_demo.cpp  block_manipulation_demo.launch  block_manipulation_demo.rviz  block_manipulation_moveit.launch  block_manipulation_rviz.vcg  demo_actions.launch  demo_calibrate.launch
turtlebot_arm_block_manipulation/launch/: block_manipulation.launch  block_manipulation_old_kinect.launch
turtlebot_arm_block_manipulation/src/: block_detection_action_server.cpp  interactive_manipulation_action_server.cpp  pick_and_place_action_server.cpp
turtlebot_arm_block_manipulation/test/: block_manipulation.cpp  block_manipulation_actions.cpp
turtlebot_arm_bringup/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  arm.launch  fake-arm.launch  manifest.xml  package.xml  simple_arm_server.launch
turtlebot_arm_bringup/config/: arm.yaml  pincher_arm.yaml  pincher_gripper.yaml  planning_description.yaml  simple_arm_server.launch  turtlebot_arm.yaml  turtlebot_gripper.yaml
turtlebot_arm_bringup/launch/: arm.launch  constraint_aware_simple_arm_server.launch  fake-arm.launch
turtlebot_arm_bringup/scripts/: fake_joint_pub.py
turtlebot_arm_description/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  test.launch
turtlebot_arm_description/meshes/: finger_px.stl  mount.stl  pincher_finger.stl
turtlebot_arm_description/urdf/: arm.urdf  arm.urdf.xacro  arm.xacro  arm_hardware.xacro  pincher_arm.urdf  pincher_arm.urdf.xacro  pincher_arm.xacro  pincher_gripper.xacro  turtlebot_arm.urdf  turtlebot_arm.urdf.xacro  turtlebot_arm.xacro  turtlebot_gripper.xacro
turtlebot_arm_ikfast_plugin/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml  turtlebot_arm_moveit_ikfast_plugin_description.xml
turtlebot_arm_ikfast_plugin/src/: turtlebot_arm_arm_ikfast_moveit_plugin.cpp  turtlebot_arm_arm_ikfast_solver.cpp
turtlebot_arm_interactive_markers/: CMakeLists.txt  mainpage.dox  manifest.xml  reset_arm.py  tuck_arm.py
turtlebot_arm_interactive_markers/launch/: arm_interactive_markers.vcg  arm_markers.launch
turtlebot_arm_interactive_markers/src/: turtlebot_arm_marker_server.cpp
turtlebot_arm_kinect_calibration/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_arm_kinect_calibration/launch/: calibrate.launch
turtlebot_arm_kinect_calibration/src/: calibrate_kinect_checkerboard.cpp  detect_calibration_pattern.cpp
turtlebot_arm_moveit_config/: .cproject  .project  .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pincher_arm.srdf  turtlebot_arm.srdf
turtlebot_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  (+18 more)
turtlebot_arm_moveit_demos/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot_arm_object_manipulation/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
turtlebot_arm_object_manipulation/action/: InteractiveManip.action  MoveToTarget.action  ObjectDetection.action  PickAndPlace.action  UserCommand.action
turtlebot_arm_object_manipulation/config/: tabletop.detection.object.ros.ork
turtlebot_arm_object_manipulation/demo/: object_manipulation_demo.cpp  object_manipulation_demo.launch  object_manipulation_demo.py  object_manipulation_demo.rviz  object_manipulation_moveit.launch
turtlebot_arm_object_manipulation/launch/: block_manipulation.launch  object_manipulation.launch  tabletop_object_detection.launch
turtlebot_arm_object_manipulation/meshes/: cube_2_5.stl
turtlebot_arm_object_manipulation/python/: keyboard_user_commands.py
turtlebot_arm_object_manipulation/src/: interactive_manipulation_action_server.cpp  object_detection_action_server.cpp  pick_and_place_action_server.cpp
turtlebot_arm_object_manipulation/test/: object_manipulation_actions.cpp
turtlebot_block_manipulation/: .project  CMakeLists.txt  block_manipulation.launch  mainpage.dox  manifest.xml  package.xml
turtlebot_block_manipulation/action/: BlockDetection.action  PickAndPlace.action
turtlebot_block_manipulation/demo/: block_manipulation_action_demo.cpp  demo_actions.launch  demo_calibrate.launch  demo_rcommander.launch
turtlebot_block_manipulation/demo/block_manipulation_state_machine/: Global.state  aborted0.state  aborted2.state  aborted3.state  block_detection_tool0.state  edges.graph  interactive_block_manipulation_tool0.state  nodes.graph  pick_and_place_tool0.state  preempted0.state  preempted1.state  preempted2.state  preempted3.state  preempted4.state  reset_arm_tool0.state  reset_arm_tool1.state  succeeded0.state
turtlebot_block_manipulation/demo/demo_state_machine/: aborted1.state  block_detection_tool0.state  edges.graph  interactive_block_manipulation_tool0.state  nodes.graph  pick_and_place_tool0.state
turtlebot_block_manipulation/launch/: block_manipulation.launch  block_manipulation_old_kinect.launch
turtlebot_block_manipulation/src/: block_detection_action_server.cpp  block_manipulation.cpp  block_manipulation_actions.cpp  interactive_manipulation_action_server.cpp  pick_and_place_action_server.cpp
turtlebot_block_manipulation/test/: block_manipulation_actions.cpp
turtlebot_kinect_arm_calibration/: .cproject  .project  CMakeLists.txt  manifest.xml  package.xml
turtlebot_kinect_arm_calibration/include/turtlebot_kinect_arm_calibration/: detect_calibration_pattern.h
turtlebot_kinect_arm_calibration/launch/: calibrate_new_kinect.launch  calibrate_old_kinect.launch  calibrate_turtlebot.launch
turtlebot_kinect_arm_calibration/src/: calibrate_kinect_checkerboard.cpp  detect_calibration_pattern.cpp
