<package>
  <name>turtlebot_arm_block_manipulation</name>
  <version>0.2.0</version>
  <description>
    turtlebot_arm_block_manipulation contains a demo allowing the TurtleBot arm
    to manipulate small blocks on a level surface using interactive markers.
  </description>

  <author>Michael Ferguson</author>
  <author>Helen Oleynikova</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/turtlebot_arm_block_manipulation</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>arbotix_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>arbotix_msgs</run_depend>
</package>
