<package>
  <name>turtlebot_arm_bringup</name>
  <version>0.3.3</version>
  <description>
   turtlebot_arm_bringup provides launch files for starting the drivers for the TurtleBot arm.
  </description>
  <author>Michael Ferguson</author>
  <author>Helen Oleynikova</author>
  <author>Melonee Wise</author>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos</maintainer>
  <license>BSD</license>
  
  <url>http://ros.org/wiki/turtlebot_arm_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>arbotix_python</run_depend>
  <run_depend>arbotix_controllers</run_depend>
</package>
